from 2.7.18 to 2.7.19
- fixed the trailing slash support in path, that was broken by commit
  503326bf8735d8eab48d4ff0ab9c000ffa031dec added at version 2.7.17

from 2.7.17 to 2.7.18
- fixed bug that broke the ability to repair an archive through ftp/sftp
  (repairing stays possible locally on the machine where resides the backup)
- fixed the reading of archive header (in-place field) when the -R path
  given at creation time was valid or common unix path (/some//path for
  example).
- fixed bug met when reading compressed data with multiple threads (-G
  option with argument 2 or larger) in sequential read mode.
- fixed bug avoiding dar to repair archives relying on block compression,
  testing the "repaired" archive lead to reporting corrupted data for all
  compressed files and compressed EA.
- disabling min-digits checks for auxiliary and reference backups when
  they are stored in a remote repository (these checks was avoiding using
  remote auxiliary and reference backups).
- fixing bug in libcurl adaptation layer to libdar (fichier_libcurl) where
  while reading, the end of file was not detected properly in very rare
  context, leading the encryption layer trying (and failing) to decipher
  the clear data located at end of archive.
- fixed bug met when reading a ciphered backup in sequential read mode with
  the help of an external catalog (the few first data and EA were reported
  as corrupted in sequential read mode, not in direct read mode or without
  the help of an external catalog).
- fixing bug in non-regression test routines, which, once fixed, revealed
  the following bugs (about sequential reading mode):
- reading a encrypted and sliced archive in sequential-read mode lead dar
  asking for the an after-last non existing slice at the end of the
  operation.
- comparing an archive having binary delta patch for a file failed in
  sequential read mode with self reporting bug in cat_file.cpp line 1479