@@ -43,19 +43,23 @@ endif
 mkdir "$build_dir"
 make clean distclean || echo "ignoring error, tree already clean"
 # setenv CXXFLAGS -O
-./configure --prefix=/ --bindir=/ --libdir=/ --datarootdir=/share --sysconfdir=/$dir_name/etc --disable-gpgme-linking --disable-dar-static $4 $5 $6 $7 $8 $9 ${10} ${11}
+./configure --prefix=/ --bindir=/bin --libdir=/bin --datarootdir=/share --sysconfdir=/etc --disable-gpgme-linking --disable-dar-static $4 $5 $6 $7 $8 $9 ${10} ${11}
 make $MAKE_OPT
 make DESTDIR="$build_dir" install-strip
 
-foreach exec ( `ls "$build_dir/"*.exe` )
+foreach exec ( `ls "$build_dir/bin/"*.exe` )
   echo "importing dlls used by $exec"
   set dlls=`cygcheck "$exec" | sed -rn -e 's#\s##g'  -e 's#\\#\\#g' -e 's#(.*\.dll)$#\1#p'`
-  cp $dlls "$build_dir"
+  cp $dlls "$build_dir/bin"
 end
 
-mv "$build_dir/share/dar" "$build_dir/doc"
-mv "$build_dir/$dir_name/etc" "$build_dir/etc"
+mv "$build_dir/share/dar" "$build_dir/doc" || exit 1
 rm -rf "$build_dir/share" "$build_dir/include" "$build_dir/pkgconfig" "$build_dir/python3" "$build_dir/$dir_name"
+
+# RSmain finding for -E/-F/-~ options to work under Cygwin
+cp `which sh.exe` "$build_dir/bin" || exit 1
+cp /bin/cygreadline* /bin/cygncurs* "$build_dir/bin" || exit 1
+mkdir "$build_dir/tmp"
 
 foreach fichier (README TODO INSTALL ChangeLog THANKS COPYING)
    cp $fichier "$build_dir/`basename $fichier`.txt"
